--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
         </form>
         <ul class="gallery"></ul>
         <span class="loader"></span>
+        <button type="button" class="load-btn">Load more</button>
       </div>
     </main>
     <script type="module" src="./main.js"></script>
